# $Id$

2006-11-15	Konstantin V. Arkhipov

	* doc/project.skel/: moved to new layout, invented by Antony.

2006-11-10	Konstantin V. Arkhipov

	* meta/: return type-hints are now generated for every class.

2006-11-09	Konstantin V. Arkhipov

	* main/Utils/RussianTextUtils.class.php: dropped unused getAsText().

	* core/OSQL/SelectQuery.class.php: dropped deprecated joinQuery().

	* meta/: now suggests DB-changes by diff'ing current and generated
	schemas.

	* meta/types/: float type corrected, double type added.

	* meta/: colored embellishments.

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.

	* main/Mail/Mail.class.php: fixed from-address encoding's handling.

	* meta/builders/BaseBuilder.class.php: fixed generation of
	non-required Ranges.

2006-11-04	Konstantin V. Arkhipov

	* ext/src/core/DB/Dialect.c: synced with php-version.

	* core/Logic/Expression.class.php: toValueString(), toFieldString()
	moved to Dialect, as suggested by Antony; toFormValue moved to Form.

2006-11-04	Anton E. Lebedevich

	* core/Logic/: backward incompatible reorganization: LogicalBlock
	merged with LogicalChain; LogicalExpression splitted to
	UnaryExpression, BinaryExpression, EqualsLowerExpression,
	InExpression; SIMILAR and NOT_SIMILAR removed from logical toBoolean()
	because they are not soundex(); getters dropped from LogicalObjects;
	unions moved to QueryCombination and QueryChain.

2006-11-02	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: dropped due to massive
	incompatibilities with new core/Logic stuff.

2006-11-01	Konstantin V. Arkhipov

	* core/DB/Transaction/: new sub-category added.

	* core/DB/FakeTransaction.class.php: dummy queryNull's wrapper added.

	* main/Containers/Unified/UnifiedContainer.class.php: do not interrupt
	so-called 'global transaction', if any.

2006-10-31	Nickolay G. Korolyov

	* core/Form/Primitives/PrimitiveFloat.class.php,