@@ -109,20 +109,20 @@
 		abstract public function clean();
 		
 		abstract protected function store(
-			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
+			$action, $key, $value, $expires = Cache::EXPIRES_MEDIUM
 		);
 		
-		public function set($key, &$value, $expires = Cache::EXPIRES_MEDIUM)
+		public function set($key, $value, $expires = Cache::EXPIRES_MEDIUM)
 		{
 			return $this->store('set', $key, $value, $expires);
 		} 
 		
-		public function add($key, &$value, $expires = Cache::EXPIRES_MEDIUM)
+		public function add($key, $value, $expires = Cache::EXPIRES_MEDIUM)
 		{
 			return $this->store('add', $key, $value, $expires);
 		} 
 		
-		public function replace($key, &$value, $expires = Cache::EXPIRES_MEDIUM)
+		public function replace($key, $value, $expires = Cache::EXPIRES_MEDIUM)
 		{
 			return $this->store('replace', $key, $value, $expires);
 		}
@@ -150,7 +150,7 @@
 			return $this;
 		}
 
-		protected function prepareData(&$value)
+		protected function prepareData($value)
 		{
 			if ($this->compress)
 				return gzcompress(serialize($value));
@@ -158,7 +158,7 @@
 				return serialize($value);
 		}
 		
-		protected function restoreData(&$value)
+		protected function restoreData($value)
 		{
 			if ($this->compress)
 				return unserialize(gzuncompress($value));
