@@ -62,7 +62,7 @@
 			return $this;
 		}
 
-		protected function store($action, $key, &$value, $expires = 0)
+		protected function store($action, $key, $value, $expires = 0)
 		{
 			if ($action == 'add' && isset($this->cache[$key]))
 				return true;
