@@ -153,7 +153,7 @@
 			return $this;
 		}
 		
-		protected function store($action, $key, &$value, $expires = 0)
+		protected function store($action, $key, $value, $expires = 0)
 		{
 			$segment = $this->getSegment();
 			
