@@ -1,5 +1,9 @@
 # $Id$
 
+2006-11-29	Konstantin V. Arkhipov
+
+	* core/Cache/: no more pass-by-reference.
+
 2006-11-15	Konstantin V. Arkhipov
 
 	* doc/project.skel/: moved to new layout, invented by Antony.
